--- a/themes/bootstrap/layout/_partial/_page.ejs
+++ b/themes/bootstrap/layout/_partial/_page.ejs
@@ -6,9 +6,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/">Home</a>
-                <a class="nav-item nav-link" href="/news">News</a>
-                <a class="nav-item nav-link" href="/product">Products</a>
+                <a class="nav-item nav-link" href="<%- url_for('/') %>">Home</a>
+                <a class="nav-item nav-link" href="<%- url_for('/news') %>">News</a>
+                <a class="nav-item nav-link" href="<%- url_for('/product') %>">Products</a>
             </div>
         </div>
     </div>
