--- a/themes/bootstrap/layout/_partial/_page.ejs
+++ b/themes/bootstrap/layout/_partial/_page.ejs
@@ -1,19 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-    <div class="container">
-        <a class="navbar-brand" href="/"><%= config.title %></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="<%- url_for('/') %>">Home</a>
-                <a class="nav-item nav-link" href="<%- url_for('/news') %>">News</a>
-                <a class="nav-item nav-link" href="<%- url_for('/product') %>">Products</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<%- partial('_nav') %>
 
-<main role="main" class="container">
+<main role="main">
     <%- body %>
 </main>
