Add initial content

--- a/themes/bootstrap/layout/_partial/_top_nav.ejs
+++ b/themes/bootstrap/layout/_partial/_top_nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="/"><%= config.title %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,13 +7,13 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="<%- url_for('/') %>">Home</a>
-                <a class="nav-item nav-link" href="https://readthedocs.org/" title="Documentation">Docs</a>
+                <a class="nav-item nav-link" href="https://github.com/aeternity/protocol/blob/master/contracts/sophia.md" title="Documentation">Docs</a>
                 <a class="nav-item nav-link" href="<%- url_for('/learn.html') %>" title="Learning materials">Learn</a>
                 <a class="nav-item nav-link" href="<%- url_for('/tools.html') %>" title="Tools">Tools</a>
                 <a class="nav-item nav-link" href="<%- url_for('/security.html') %>" title="Security">Security</a>
                 <a class="nav-item nav-link" href="<%- url_for('/community.html') %>" title="Community">Community</a>
-                <a class="nav-item nav-link" href="https://medium.com" title="Blog">Blog</a>
-                <a class="nav-item nav-link" href="<%- url_for('/team.html') %>" title="Team and Governance">T&G</a>
+                <a class="nav-item nav-link" href="https://blog.aeternity.com/" title="Blog">Blog</a>
+                <a class="nav-item nav-link" href="<%- url_for('/team.html') %>" title="Team">Team</a>
             </div>
         </div>
     </div>
