--- a/themes/bootstrap/layout/_partial/_footer.ejs
+++ b/themes/bootstrap/layout/_partial/_footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer text-center p-5 bg-secondary text-light">
   <div class="container">
-    <p><a href="https://github.com/groupsky/sophia-lang-website">The website source in GitHub</a></p>
+    <p><a href="https://github.com/groupsky/sophia-lang-website" class="text-light">The website source in GitHub</a></p>
   </div>
 </footer>
 
