--- a/themes/bootstrap/layout/_partial/_top_nav.ejs
+++ b/themes/bootstrap/layout/_partial/_top_nav.ejs
@@ -7,8 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="<%- url_for('/') %>">Home</a>
-                <a class="nav-item nav-link" href="https://github.com/aeternity/protocol/blob/master/contracts/sophia.md" title="Documentation">Docs</a>
-                <a class="nav-item nav-link" href="<%- url_for('/learn.html') %>" title="Learning materials">Learn</a>
+                <a class="nav-item nav-link" href="<%- url_for('/docs.html') %>" title="Learning materials">Docs</a>
                 <a class="nav-item nav-link" href="<%- url_for('/tools.html') %>" title="Tools">Tools</a>
                 <a class="nav-item nav-link" href="<%- url_for('/security.html') %>" title="Security">Security</a>
                 <a class="nav-item nav-link" href="<%- url_for('/community.html') %>" title="Community">Community</a>
