Add social links

--- a/themes/bootstrap/layout/_partial/_footer.ejs
+++ b/themes/bootstrap/layout/_partial/_footer.ejs
@@ -1,6 +1,10 @@
 <footer class="footer text-center p-5 bg-secondary text-light">
   <div class="container">
-    <p><a href="https://github.com/groupsky/sophia-lang-website" class="text-light">The website source in GitHub</a></p>
+    <p>
+        <a href="https://github.com/groupsky/sophia-lang-website" class="text-light">The website source in GitHub</a> |
+        <a href="https://twitter.com/sophialangML" class="text-light">Twitter</a> |
+        <a href="https://forum.aeternity.com/c/aepplications/sophia" class="text-light">Sophia</a>
+    </p>
   </div>
 </footer>
 
