--- a/pages/community.ejs
+++ b/pages/community.ejs
@@ -11,17 +11,17 @@
     <div class="col-md-4">
       <h2>Q&A</h2>
       <p>For questions and answers you can use Stackoverflow</p>
-      <p><a class="btn btn-secondary" href="https://stackoverflow.com/search?q=sophia" role="button">Link &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://stackoverflow.com/search?q=sophia" role="button">Link &raquo;</a></p>
     </div>
     <div class="col-md-4">
       <h2>Chat</h2>
       <p>The chat with developers requires registration and approval.</p>
-      <p><a class="btn btn-secondary" href="https://devchat.aeternity.com/" role="button">Link &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://devchat.aeternity.com/" role="button">Link &raquo;</a></p>
     </div>
     <div class="col-md-4">
       <h2>Tickets in GitHub</h2>
       <p>If you need to report a bug or suggest a change, you can use the Issues section in the GitHub repo.</p>
-      <p><a class="btn btn-secondary" href="https://github.com/aeternity/protocol/tree/master/contracts" role="button">Link &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://github.com/aeternity/protocol/tree/master/contracts" role="button">Link &raquo;</a></p>
     </div>
   </div>
 
