--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -7,7 +7,7 @@ scripts:
   <div class="container">
     <h1 class="display-3">Sophia</h1>
     <p>Functional language for smart contract.</p>
-    <p><a class="btn btn-primary btn-lg" href="learn.html" role="button">Get started &raquo;</a></p>
+    <p><a class="btn btn-lg bg-dramatic" href="learn.html" role="button">Get started &raquo;</a></p>
   </div>
 </section>
 
