--- a/themes/bootstrap/layout/_partial/_footer.ejs
+++ b/themes/bootstrap/layout/_partial/_footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer text-center p-5 bg-secondary text-light">
+<footer class="footer text-center p-5 bg-exciting text-light">
   <div class="container">
     <p>
         <a href="https://github.com/groupsky/sophia-lang-website" class="text-light">The website source in GitHub</a> |
