--- a/pages/docs.ejs
+++ b/pages/docs.ejs
@@ -10,13 +10,13 @@
 
   <div class="row">
     <div class="col-md-4">
-      <p><a class="btn btn-secondary" href="https://github.com/aeternity/protocol/blob/master/contracts/sophia.md" role="button">Documentation &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://github.com/aeternity/protocol/blob/master/contracts/sophia.md" role="button">Documentation &raquo;</a></p>
     </div>
     <div class="col-md-4">
-      <p><a class="btn btn-secondary" href="https://github.com/aeternity/tutorials" role="button">Tutorials &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://github.com/aeternity/tutorials" role="button">Tutorials &raquo;</a></p>
     </div>
     <div class="col-md-4">
-      <p><a class="btn btn-secondary" href="https://github.com/aeternity/aepp-sophia-examples" role="button">Examples &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://github.com/aeternity/aepp-sophia-examples" role="button">Examples &raquo;</a></p>
     </div>
   </div>
 
