--- a/pages/tools.ejs
+++ b/pages/tools.ejs
@@ -10,17 +10,17 @@
     <div class="col-md-4">
       <h2>Forgae</h2>
       <p>A framework for creating and setting up an aeternity project. Providing functionalities for running a local node, compilation, deployment and unit testing smart contracts.</p>
-      <p><a class="btn btn-secondary" href="https://github.com/aeternity/aepp-forgae-js" role="button">View details &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://github.com/aeternity/aepp-forgae-js" role="button">View details &raquo;</a></p>
     </div>
     <div class="col-md-4">
       <h2>Contract Editor</h2>
       <p>This is a simple web application that demonstrates aeternity Contracts.</p>
-      <p><a class="btn btn-secondary" href="https://github.com/aeternity/aepp-contracts" role="button">View details &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://github.com/aeternity/aepp-contracts" role="button">View details &raquo;</a></p>
     </div>
     <div class="col-md-4">
       <h2>Compiler</h2>
       <p>Sophia compiler.</p>
-      <p><a class="btn btn-secondary" href="https://github.com/aeternity/aesophia/blob/master/docs/aeso_compiler.md" role="button">View details &raquo;</a></p>
+      <p><a class="btn bg-dramatic" href="https://github.com/aeternity/aesophia/blob/master/docs/aeso_compiler.md" role="button">View details &raquo;</a></p>
     </div>
   </div>
 
