--- a/themes/bootstrap/layout/_partial/_top_nav.ejs
+++ b/themes/bootstrap/layout/_partial/_top_nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-exciting" id="top-nav">
     <div class="container">
         <a class="navbar-brand" href="<%- url_for('/') %>"><%= config.title %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
