--- a/themes/bootstrap/layout/layout.ejs
+++ b/themes/bootstrap/layout/layout.ejs
@@ -1,11 +1,11 @@
 <!doctype html>
-<html<% if ( config.language ) { %> lang="<%= config.language %>"<% } %>>
+<html<% if ( config.language ) { %> lang="<%= config.language %>"<% } %> class="h-100">
 <head>
 
     <%- partial('_partial/_head') %>
 
 </head>
-<body>
+<body class="d-flex flex-column h-100">
 
     <%- partial('_partial/_header') %>
 
