--- a/themes/bootstrap/layout/_partial/_top_nav.ejs
+++ b/themes/bootstrap/layout/_partial/_top_nav.ejs
@@ -1,11 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-exciting" id="top-nav">
     <div class="container">
-        <a class="navbar-brand" href="<%- url_for('/') %>"><%= config.title %></a>
+
+        <a class="navbar-brand" href="<%- url_for('/') %>">
+            <%- image_tag('images/sophia.png', {height: 50}) %>
+            <%= config.title %>
+        </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="<%- url_for('/') %>">Home</a>
                 <a class="nav-item nav-link" href="<%- url_for('/docs.html') %>" title="Learning materials">Docs</a>
                 <a class="nav-item nav-link" href="<%- url_for('/tools.html') %>" title="Tools">Tools</a>
