--- a/themes/bootstrap/source/css/_top-nav.scss
+++ b/themes/bootstrap/source/css/_top-nav.scss
@@ -1,3 +1,14 @@
 // #top-nav {
 // 	background: $ae-color-exciting;
 // }
+
+.navbar-brand {
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+	font-size: 1.5em;
+	padding-top: 10px;
+
+	img {
+		margin-top: -5px;
+	}
+}
