--- a/themes/bootstrap/layout/_partial/_top_nav.ejs
+++ b/themes/bootstrap/layout/_partial/_top_nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-exciting" id="top-nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-exciting flex-shrink-0" id="top-nav">
     <div class="container">
 
         <a class="navbar-brand" href="<%- url_for('/') %>">
