--- a/themes/bootstrap/layout/layout.ejs
+++ b/themes/bootstrap/layout/layout.ejs
@@ -9,7 +9,7 @@
 
     <%- partial('_partial/_header') %>
 
-    <main role="main">
+    <main role="main" class="flex-shrink-0">
         <%- body %>
     </main>
 
