Add logo in the footer

--- a/themes/bootstrap/layout/_partial/_footer.ejs
+++ b/themes/bootstrap/layout/_partial/_footer.ejs
@@ -5,6 +5,11 @@
         <a href="https://twitter.com/sophialangML" class="text-light">Twitter</a> |
         <a href="https://forum.aeternity.com/c/aepplications/sophia" class="text-light">Sophia</a>
     </p>
+
+    <p class="pt-4 logo">
+        <%- image_tag('images/sophia.png', {height: 100}) %>
+        Sophia
+    </p>
   </div>
 </footer>
 
