--- a/themes/bootstrap/layout/_partial/_top_nav.ejs
+++ b/themes/bootstrap/layout/_partial/_top_nav.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-exciting flex-shrink-0" id="top-nav">
     <div class="container">
 
-        <a class="navbar-brand" href="<%- url_for('/') %>">
+        <a class="navbar-brand logo" href="<%- url_for('/') %>">
             <%- image_tag('images/sophia.png', {height: 50}) %>
             <%= config.title %>
         </a>
